tests/aster/x/mochi/rosetta/99-bottles-of-beer-2.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/99-bottles-of-beer-2.mochi:6:14

  6 |     let ch = substring(s, i, i + 1)
    |              ^

help:
  Declare substring before use
